# bsu-operating-systems

./: .gitignore  README.md
Multithreading/: Matrix.h
channel/: BufferedChannel.h  CMakeLists.txt  main.cpp
library-linux/ClientApp/: CMakeLists.txt
library-linux/Number/: CMakeLists.txt  Number.cpp
library-linux/cmake/Vector/: Vector.cpp
library-windows/ClientApp/: ClientApp.sln
library-windows/ClientApp/ClientApp/: ClientApp.cpp  ClientApp.vcxproj
library-windows/ClientApp/Debug/: ClientApp.ilk
library-windows/Number/Debug/: Number.lib
library-windows/Number/Number/: Number.cpp  Number.h  Number.vcxproj.filters
library-windows/RunTimeLinkingClientApp/RunTimeLinkingClientApp/: RunTimeLinkingClientApp.vcxproj
library-windows/Vector/Debug/: Vector.exp  Vector.ilk  Vector.lib
library-windows/Vector/Vector/: Vector.cpp  Vector.h  Vector.vcxproj
library-windows/visual_studio/RunTimeLinkingClientApp/: RunTimeLinkingClientApp.sln
library-windows/visual_studio/Vector/: Vector.sln
library_linux/cmake/Vector/: CMakeLists.txt
library_linux/shell/: build.sh
library_windows/shell/: build.ps1
multithreading/: CMakeLists.txt  MatrixMultiplicator.cpp  MatrixMultiplicator.h  main.cpp
multithreading_linux/: Matrix.cpp  Matrix.h  MatrixMultiplicator.cpp  MatrixMultiplicator.h  main.cpp
multithreading_windows/: CMakeLists.txt  MatrixMultiplicator.cpp  MatrixMultiplicator.h  main.cpp
pipes_linux/Main/: main.cpp
pipes_linux/S/: main.cpp
processes_linux/Killer/: main.cpp
processes_linux/user/: main.cpp
processes_windows/Killer/: Killer.sln
processes_windows/User/: User.sln
(+40 files in other folders)
